Update tracking queries component

--- a/src/app/pages/tracking-queries/tracking-queries.component.html
+++ b/src/app/pages/tracking-queries/tracking-queries.component.html
@@ -2,6 +2,36 @@
   <div class="header">
     <app-home-button></app-home-button>
   </div>
-  <p>tracking-queries works!</p>
+  <div class="queries-table">
+    <div class="relative overflow-hidden shadow-md rounded-lg">
+      <table class="table-fixed w-full text-left">
+        <thead class="uppercase bg-[#6b7280] text-[#e5e7eb]" style="background-color: #6b7280; color: #e5e7eb;">
+        <tr>
+          <th class="py-2 border text-center font-bold p-4" contenteditable="false">Query ID</th>
+          <th class="py-2 border text-center font-bold p-4" contenteditable="false">Text</th>
+          <th class="py-2 border text-center font-bold p-4" contenteditable="false">Active</th>
+        </tr>
+        </thead>
+        <tbody class="bg-white text-gray-500 bg-[#FFFFFF] text-[#6b7280]"
+               style="background-color: #FFFFFF; color: #6b7280;">
+        <tr *ngFor="let query of queries" class="py-5">
+          <td class="py-5 border text-center  p-4" contenteditable="true">{{ query[0] }}</td>
+          <td class="py-5 border text-center  p-4" contenteditable="true">{{ query[1] }}</td>
+          <td class="py-5 border text-center  p-4" contenteditable="true">{{ query[2] === 1 ? 'true' : 'false' }}</td>
+        </tr>
+        </tbody>
+        <tfoot class="uppercase bg-[#6b7280] text-[#e5e7eb]" style="background-color: #6b7280; color: #e5e7eb;">
+        <tr [ngStyle]="{'background-color': getUpdateStatusColor()}">
+          <td class="py-2 border text-center font-bold p-4" contenteditable="false" colspan="3">{{ updateStatus }}</td>
+        </tr>
+        <tr *ngIf="timeSinceLastUpdate!=-1">
+          <td class="py-2 border text-center font-bold p-4" contenteditable="false" colspan="3">
+            Last updated: {{ timeSinceLastUpdate }} seconds ago
+          </td>
+        </tr>
+        </tfoot>
+      </table>
+    </div>
+  </div>
 </div>
 
