--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
   font-family: 'Raleway', sans-serif;
   background-image: radial-gradient(circle at center, #899Dc4, #495D84);
