--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,6 @@
+<div class="title">
+  {{ projectName }}
+</div>
 <div class="menu">
   <div class="all" (mouseenter)="onHover()" (mouseleave)="onLeave()">
     <div class="lefter" [routerLink]="isReady ? ['/contact-dev'] : null">
