Update trading platforms component

--- a/src/app/pages/tracking-queries/tracking-queries.component.html
+++ b/src/app/pages/tracking-queries/tracking-queries.component.html
@@ -13,7 +13,7 @@
           <th class="py-2 border text-center font-bold p-4" contenteditable="false">Actions</th>
         </tr>
         </thead>
-        <tbody class="bg-white text-gray-500 bg-[#FFFFFF] text-[#6b7280]"
+        <tbody class="bg-white text-gray-500"
                style="background-color: #FFFFFF; color: #6b7280;">
         <tr *ngFor="let query of queries" class="py-5">
           <td class="py-5 border text-center  p-4" contenteditable="false">{{ query[0] }}</td>
