--- a/src/app/pages/goods/goods.component.html
+++ b/src/app/pages/goods/goods.component.html
@@ -1,6 +1,133 @@
-<div class="goods" style="text-align: center">
+<div class="goods text-center">
   <div class="header py-5">
     <app-home-button></app-home-button>
   </div>
-  <p>goods works!</p>
+  <div class="goods-filters mx-auto mb-5 w-4/5">
+    <div class="relative overflow-hidden shadow-md rounded-lg ">
+      <div class="uppercase bg-[#6b7280] text-[#e5e7eb] w-full py-5 px-20 columns-3">
+        <!--        <div class="platform-filter w-full">-->
+        <!--          <label for="platform">Platform</label> <br>-->
+        <!--          <select id="platform" name="platform" class="mx-3 text-gray-500"-->
+        <!--                  [(ngModel)]="currentPlatform" (change)="filterGoods()">-->
+        <!--            <option value="all" selected>All</option>-->
+        <!--            <option *ngFor="let p of platforms" [value]="p">{{ p }}</option>-->
+        <!--          </select>-->
+        <!--        </div>-->
+        <!--        <div class="query-filter w-full">-->
+        <!--          <label for="query-select">Query</label><br>-->
+        <!--          <select id="query-select" name="query" class="mx-3 text-gray-500"-->
+        <!--                  [(ngModel)]="currentQuery" (change)="filterGoods()">-->
+        <!--            <option value="-1" selected>All</option>-->
+        <!--            <option *ngFor="let q of queries" [value]="q[0]">{{ q[1] }}</option>-->
+        <!--          </select>-->
+        <!--        </div>-->
+        <div class="platform-filter w-full overflow-hidden shadow-md rounded-lg">
+          <mat-form-field subscriptSizing="dynamic" class="w-full">
+            <mat-label>Platform</mat-label>
+            <mat-select [(value)]="currentPlatform" (valueChange)="filterGoods()">
+              <mat-option value="all">All</mat-option>
+              @for (p of platforms; track p) {
+                <mat-option [value]="p">{{ p }}</mat-option>
+              }
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <div class="query-filter w-full overflow-hidden shadow-md rounded-lg">
+          <mat-form-field subscriptSizing="dynamic" class="w-full">
+            <mat-label>Query</mat-label>
+            <mat-select [(value)]="currentQuery" (valueChange)="filterGoods()">
+              <mat-option [value]="-1">All</mat-option>
+              @for (q of queries; track q) {
+                <mat-option [value]="q[0]">{{ q[1] }}</mat-option>
+              }
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <div class="date-filter w-full overflow-hidden shadow-md rounded-lg">
+          <mat-form-field subscriptSizing="dynamic" class="w-full">
+            <mat-label>Date</mat-label>
+            <mat-date-range-input [rangePicker]="picker">
+              <input matStartDate placeholder="Start date" [(ngModel)]="startDate" (dateChange)="dateChanged()">
+              <input matEndDate placeholder="End date" [(ngModel)]="endDate" (dateChange)="dateChanged()">
+            </mat-date-range-input>
+            <!--            <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>-->
+            <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-date-range-picker #picker></mat-date-range-picker>
+          </mat-form-field>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="goods-table mx-auto mb-10 w-4/5">
+    <div class="relative overflow-hidden shadow-md rounded-lg">
+      <table class="table-fixed w-full text-left">
+        <thead class="uppercase bg-[#6b7280] text-[#e5e7eb]">
+        <tr>
+          <th class="py-2 border text-center font-bold p-4 w-1/12" contenteditable="false">ID</th>
+          <th class="py-2 border text-center font-bold p-4 w-1/12" contenteditable="false">Platform</th>
+          <th class="py-2 border text-center font-bold p-4 w-1/6" contenteditable="false">Query</th>
+          <th class="py-2 border text-center font-bold p-4 w-1/3" contenteditable="false">Name</th>
+          <th class="py-2 border text-center font-bold p-4 w-1/12" contenteditable="false">Brand</th>
+          <th class="py-2 border text-center font-bold p-4 w-1/12" contenteditable="false">Added</th>
+          <th class="py-2 border text-center font-bold p-4 w-1/12" contenteditable="false">Last confirmed</th>
+          <th class="py-2 border text-center font-bold p-4 w-1/12" contenteditable="false">Actions</th>
+        </tr>
+        </thead>
+        <tbody class="bg-white text-gray-500">
+        <tr *ngFor="let g of filteredGoods.slice(currentPage*pageSize,(currentPage*pageSize)+pageSize)"
+            class="py-5">
+          <td class="py-5 border text-center  p-4" contenteditable="false">{{ g[0] }}</td>
+          <td class="py-5 border text-center  p-4" contenteditable="false">{{ g[1] }}</td>
+          <td class="py-5 border text-center  p-4" contenteditable="false">{{ getQueryName(g[3]) }}</td>
+          <td class="py-5 border text-center  p-4" contenteditable="false">{{ g[4] }}</td>
+          <td class="py-5 border text-center  p-4" contenteditable="false">{{ g[7] }}</td>
+          <td class="py-5 border text-center  p-4" contenteditable="false">{{ g[8] | date:'shortDate' }}</td>
+          <td class="py-5 border text-center  p-4" contenteditable="false">{{ g[10] | date:'shortDate' }}</td>
+          <td class="py-5 border text-center  p-4" contenteditable="false">
+            <button *ngIf="g[5]" (click)="window.open(g[5], '_blank')"
+                    class="bg-green-400 hover:bg-green-500 font-bold py-2 px-5 shadow-md rounded-lg">
+              Link
+            </button>
+            <button *ngIf="g[6]" (click)="window.open(g[6], '_blank')"
+                    class="bg-pink-400 hover:bg-pink-500 font-bold py-2 px-5 shadow-md rounded-lg">
+              Img
+            </button>
+          </td>
+        </tr>
+        </tbody>
+        <tfoot class="uppercase bg-[#6b7280] text-[#e5e7eb]">
+        <tr [ngStyle]="{'background-color': getUpdateStatusColor()}">
+          <td class="py-2 border text-center font-bold p-4" contenteditable="false"
+              colspan="7">{{ updateStatus }}
+          </td>
+        </tr>
+        <tr *ngIf="timeSinceLastUpdate!=-1">
+          <td class="py-2 border text-center font-bold p-4" contenteditable="false" colspan="7">
+            Last updated: {{ timeSinceLastUpdate }} seconds ago
+          </td>
+        </tr>
+        <tr>
+          <td class="py-2 border text-center font-bold p-4" contenteditable="false" colspan="7">
+            Page {{ currentPage + 1 }} of {{ Math.ceil(filteredGoods.length / pageSize) }}
+          </td>
+        </tr>
+        <tr>
+          <td class="py-2 border text-center font-bold" contenteditable="false" colspan="7">
+            <button class="bg-red-600 hover:bg-red-700 font-bold py-2 px-5 mx-2 shadow-md rounded-lg"
+                    (click)="firstPage()">First
+            </button>
+            <button class="bg-red-400 hover:bg-red-500 font-bold py-2 px-5 mx-2 shadow-md rounded-lg"
+                    (click)="prevPage()">Previous
+            </button>
+            <button class="bg-green-400 hover:bg-green-500 font-bold py-2 px-5 mx-2 shadow-md rounded-lg"
+                    (click)="nextPage()">Next
+            </button>
+            <button class="bg-green-600 hover:bg-green-700 font-bold py-2 px-5 mx-2 shadow-md rounded-lg"
+                    (click)="lastPage()">Last
+            </button>
+          </td>
+        </tfoot>
+      </table>
+    </div>
+  </div>
 </div>
