Update price-history component

--- a/src/app/pages/availability-history/availability-history.component.html
+++ b/src/app/pages/availability-history/availability-history.component.html
@@ -2,5 +2,5 @@
   <div class="header py-5">
     <app-home-button></app-home-button>
   </div>
-  <p>availability-history works!</p>
+  <p>availability-history component is in development</p>
 </div>
