--- a/src/app/pages/goods/goods.component.html
+++ b/src/app/pages/goods/goods.component.html
@@ -64,13 +64,13 @@
         <thead class="uppercase bg-[#6b7280] text-[#e5e7eb]">
         <tr>
           <th class="py-2 border text-center font-bold p-4 w-1/12" contenteditable="false">ID</th>
-          <th class="py-2 border text-center font-bold p-4 w-1/12" contenteditable="false">Platform</th>
+          <th class="py-2 border text-center font-bold p-2 w-1/12" contenteditable="false">Platform</th>
           <th class="py-2 border text-center font-bold p-4 w-1/6" contenteditable="false">Query</th>
           <th class="py-2 border text-center font-bold p-4 w-1/3" contenteditable="false">Name</th>
           <th class="py-2 border text-center font-bold p-4 w-1/12" contenteditable="false">Brand</th>
           <th class="py-2 border text-center font-bold p-4 w-1/12" contenteditable="false">Added</th>
-          <th class="py-2 border text-center font-bold p-4 w-1/12" contenteditable="false">Last confirmed</th>
-          <th class="py-2 border text-center font-bold p-4 w-1/12" contenteditable="false">Actions</th>
+          <th class="py-2 border text-center font-bold p-4 w-1/12" contenteditable="false">Last</th>
+          <th class="py-2 border text-center font-bold p-4 w-1/6" contenteditable="false">Actions</th>
         </tr>
         </thead>
         <tbody class="bg-white text-gray-500">
@@ -83,14 +83,22 @@
           <td class="py-5 border text-center  p-4" contenteditable="false">{{ g[7] }}</td>
           <td class="py-5 border text-center  p-4" contenteditable="false">{{ g[8] | date:'shortDate' }}</td>
           <td class="py-5 border text-center  p-4" contenteditable="false">{{ g[10] | date:'shortDate' }}</td>
-          <td class="py-5 border text-center  p-4" contenteditable="false">
+          <td class="py-5 border text-center  p-4 flex flex-wrap gap-2" contenteditable="false">
             <button *ngIf="g[5]" (click)="window.open(g[5], '_blank')"
-                    class="bg-green-400 hover:bg-green-500 font-bold py-2 px-5 shadow-md rounded-lg">
+                    class="bg-green-400 hover:bg-green-500 font-bold py-2 px-5 m-0 shadow-md rounded-lg">
               Link
             </button>
             <button *ngIf="g[6]" (click)="window.open(g[6], '_blank')"
-                    class="bg-pink-400 hover:bg-pink-500 font-bold py-2 px-5 shadow-md rounded-lg">
+                    class="bg-pink-400 hover:bg-pink-500 font-bold py-2 px-5 m-0 shadow-md rounded-lg">
               Img
+            </button>
+            <button *ngIf="g[0]" [routerLink]="['/price-history/', g[0]]"
+                    class="bg-blue-400 hover:bg-blue-500 font-bold py-2 px-5 m-0 shadow-md rounded-lg">
+              $$$
+            </button>
+            <button *ngIf="g[0]" [routerLink]="['/availability-history/', g[0]]"
+                    class="bg-yellow-400 hover:bg-yellow-500 font-bold py-2 px-5 m-0 shadow-md rounded-lg">
+              Aval
             </button>
           </td>
         </tr>
@@ -98,21 +106,21 @@
         <tfoot class="uppercase bg-[#6b7280] text-[#e5e7eb]">
         <tr [ngStyle]="{'background-color': getUpdateStatusColor()}">
           <td class="py-2 border text-center font-bold p-4" contenteditable="false"
-              colspan="7">{{ updateStatus }}
+              colspan="8">{{ updateStatus }}
           </td>
         </tr>
         <tr *ngIf="timeSinceLastUpdate!=-1">
-          <td class="py-2 border text-center font-bold p-4" contenteditable="false" colspan="7">
+          <td class="py-2 border text-center font-bold p-4" contenteditable="false" colspan="8">
             Last updated: {{ timeSinceLastUpdate }} seconds ago
           </td>
         </tr>
         <tr>
-          <td class="py-2 border text-center font-bold p-4" contenteditable="false" colspan="7">
+          <td class="py-2 border text-center font-bold p-4" contenteditable="false" colspan="8">
             Page {{ currentPage + 1 }} of {{ Math.ceil(filteredGoods.length / pageSize) }}
           </td>
         </tr>
         <tr>
-          <td class="py-2 border text-center font-bold" contenteditable="false" colspan="7">
+          <td class="py-2 border text-center font-bold" contenteditable="false" colspan="8">
             <button class="bg-red-600 hover:bg-red-700 font-bold py-2 px-5 mx-2 shadow-md rounded-lg"
                     (click)="firstPage()">First
             </button>
