Add new components, update home-button component

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -23,7 +23,7 @@
   <div class="menu-element" id="settings" [routerLink]="isReady ? ['/settings'] : null">
     <div class="text">Settings</div>
   </div>
-  <div class="menu-element" id="statistics" [routerLink]="isReady ? ['/statistic'] : null">
+  <div class="menu-element" id="statistics" [routerLink]="isReady ? ['/statistics'] : null">
     <div class="text">Statistics</div>
   </div>
   <div class="menu-element" id="export" [routerLink]="isReady ? ['/export'] : null">
