--- a/src/app/shared/home-button/home-button.component.html
+++ b/src/app/shared/home-button/home-button.component.html
@@ -1,3 +1,3 @@
-<div class="home-button">
+<div class="home-button mx-auto">
   <div class="home-button-text" routerLink="/" routerLinkActive="active" ariaCurrentWhenActive="page">Home</div>
 </div>
