Update info component

--- a/src/app/pages/info/info.component.html
+++ b/src/app/pages/info/info.component.html
@@ -2,5 +2,81 @@
   <div class="header py-5">
     <app-home-button></app-home-button>
   </div>
-  <p>info works!</p>
+  <div class="project-background mx-auto w-3/5 font-sans mb-10">
+    <h1 class="font-mono text-gray-200 font-bold">Project Background</h1>
+    <p class="text-justify indent-7 text-base text-gray-300">In today's world, e-commerce plays a key role in
+      economic
+      development,
+      providing
+      convenient and fast access to
+      goods and services for consumers around the world. The growing number of e-commerce platforms such as Amazon,
+      eBay, Alibaba, and others creates a need for effective tools to monitor, collect, and analyze data on products,
+      prices, and market trends. This is especially important for businesses seeking to remain competitive and respond
+      quickly to market changes. In this regard, the development of a web service for collecting information from
+      electronic trading platforms is relevant and necessary.</p>
+    <p class="text-justify indent-7 text-base text-gray-300">The reason for this work is the need to automate the
+      processes of collecting and analyzing a large amount of data
+      from various electronic trading platforms. Existing solutions often do not fully meet the needs of users due to
+      their limited functionality, low performance, or lack of integration with other systems. Thus, the development of
+      a web service that enables automatic data collection, processing, and analysis is extremely important for ensuring
+      efficient business operations.</p>
+    <p class="text-justify indent-7 text-base text-gray-300">Technologies for collecting and analyzing data from
+      electronic trading platforms are actively developing in the
+      world. The use of web scraping, machine learning, and big data methods allows for high accuracy and speed of
+      information processing. Leading companies and research institutions, such as Google, Amazon Web Services, and IBM,
+      are actively working on creating tools to automate the processes of monitoring and analyzing market data.
+      Scientists and experts in the field of computer science and artificial intelligence are exploring new methods of
+      data collection and processing that can significantly improve the efficiency of working with large amounts of
+      information.</p>
+    <p class="text-justify indent-7 text-base text-gray-300">Today, there are a large number of different tools and
+      services for collecting information from electronic
+      trading platforms. However, many of them have limited functionality or do not provide the required level of
+      integration with other systems. Leading scientific institutions and organizations, such as MIT Media Lab and
+      Stanford Artificial Intelligence Laboratory, are actively working on research in the field of data collection and
+      analysis automation, developing new algorithms and technologies that can significantly improve the accuracy and
+      speed of information processing.
+      The web service for collecting information from electronic trading platforms can be used in various areas,
+      including:
+    </p>
+    <ul class="text-justify indent-7 text-base text-gray-300 ml-10" style="list-style-type: circle">
+      <li>Business analytics;</li>
+      <li>Marketing;</li>
+      <li>Logistics and inventory management;</li>
+      <li>Financial analysis.</li>
+    </ul>
+  </div>
+
+  <div class="c4-models mx-auto w-3/5 font-sans mb-10">
+    <h1 class="font-mono text-gray-200 font-bold">Schematics</h1>
+    <img ngSrc="assets/images/c4-1-diagram.png" alt="C4 System Context" class="w-full rounded-xl" height="3100"
+         width="2350">
+    <p class="text-center text-xl text-gray-400 italic">C4 System Context Diagram</p>
+    <img ngSrc="assets/images/c4-1-diagram-key.png" alt="Diagram key" class="w-full rounded-xl mt-10" height="500"
+         width="2500">
+    <p class="text-center text-xl text-gray-400 italic">C4 Diagram key</p>
+
+    <img ngSrc="assets/images/c4-2-diagram.png" alt="C4 Container" class="w-full rounded-xl mt-20" height="4763"
+         width="3120">
+    <p class="text-center text-xl text-gray-400 italic">C4 Container Diagram</p>
+    <img ngSrc="assets/images/c4-2-diagram-key.png" alt="Diagram key" class="w-full rounded-xl mt-10" height="500"
+         width="2500">
+    <p class="text-center text-xl text-gray-400 italic">C4 Diagram key</p>
+
+    <img ngSrc="assets/images/c4-3-diagram.png" alt="C4 Container" class="w-full rounded-xl mt-20" height="1411"
+         width="2350">
+    <p class="text-center text-xl text-gray-400 italic">C4 Component Diagram 1</p>
+    <img ngSrc="assets/images/c4-3-diagram-key.png" alt="Diagram key" class="w-full rounded-xl mt-10" height="500"
+         width="2500">
+    <p class="text-center text-xl text-gray-400 italic">C4 Diagram key</p>
+
+    <img ngSrc="assets/images/c4-4-diagram.png" alt="C4 Container" class="w-full rounded-xl mt-20" height="3700"
+         width="2350">
+    <p class="text-center text-xl text-gray-400 italic">C4 Component Diagram 2</p>
+    <img ngSrc="assets/images/c4-4-diagram-key.png" alt="Diagram key" class="w-full rounded-xl mt-10" height="500"
+         width="2500">
+    <p class="text-center text-xl text-gray-400 italic">C4 Diagram key</p>
+  </div>
+  <!--  <div class="developer-notes mx-auto w-3/5 font-sans mb-10">-->
+  <!--    <h1 class="font-mono text-gray-200">Developer Info</h1>-->
+  <!--  </div>-->
 </div>
