Update api-docs component

--- a/src/app/pages/api-docs/api-docs.component.html
+++ b/src/app/pages/api-docs/api-docs.component.html
@@ -2,5 +2,5 @@
   <div class="header py-5">
     <app-home-button></app-home-button>
   </div>
-  <p>api-docs works!</p>
+  <a mat-raised-button [href]="api_docs_url" target="_blank">Swagger API Documentation</a>
 </div>
