Update contact-dev component

--- a/src/app/pages/contact-dev/contact-dev.component.html
+++ b/src/app/pages/contact-dev/contact-dev.component.html
@@ -2,7 +2,10 @@
   <div class="header" style="padding-top: 20px;padding-bottom: 20px;">
     <app-home-button></app-home-button>
   </div>
-  <p>contact-dev works!</p>
+  <p class="text-xl">You can contact the developer via email <br><a
+    class="text-xl text-red-600"
+    href="mailto:merlin.ua.1@gmail.com?subject=Project-D&body=Dear%20DEVELOPER%2C%0D%0A">{{ developerEmail }}</a><br>
+    <span class="text-xs">↑↑↑    LINK IS CLICKABLE    ↑↑↑</span></p>
 </div>
 
 
