Update Docker run configuration

--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -14,6 +14,10 @@
       }
     </mat-form-field>
   </div>
+  <div class="mt-5">
+    <p>Service address: {{ dataService.getServiceAddress() }}</p>
+    <p>IS Production: {{ dataService.isProduction() }}</p>
+  </div>
 </div>
 
 
