--- a/src/app/pages/goods/goods.component.html
+++ b/src/app/pages/goods/goods.component.html
@@ -5,22 +5,6 @@
   <div class="goods-filters mx-auto mb-5 w-4/5">
     <div class="relative overflow-hidden shadow-md rounded-lg ">
       <div class="uppercase bg-[#6b7280] text-[#e5e7eb] w-full py-5 px-20 columns-3">
-        <!--        <div class="platform-filter w-full">-->
-        <!--          <label for="platform">Platform</label> <br>-->
-        <!--          <select id="platform" name="platform" class="mx-3 text-gray-500"-->
-        <!--                  [(ngModel)]="currentPlatform" (change)="filterGoods()">-->
-        <!--            <option value="all" selected>All</option>-->
-        <!--            <option *ngFor="let p of platforms" [value]="p">{{ p }}</option>-->
-        <!--          </select>-->
-        <!--        </div>-->
-        <!--        <div class="query-filter w-full">-->
-        <!--          <label for="query-select">Query</label><br>-->
-        <!--          <select id="query-select" name="query" class="mx-3 text-gray-500"-->
-        <!--                  [(ngModel)]="currentQuery" (change)="filterGoods()">-->
-        <!--            <option value="-1" selected>All</option>-->
-        <!--            <option *ngFor="let q of queries" [value]="q[0]">{{ q[1] }}</option>-->
-        <!--          </select>-->
-        <!--        </div>-->
         <div class="platform-filter w-full overflow-hidden shadow-md rounded-lg">
           <mat-form-field subscriptSizing="dynamic" class="w-full">
             <mat-label>Platform</mat-label>
@@ -94,11 +78,11 @@
             </button>
             <button *ngIf="g[0]" [routerLink]="['/price-history/', g[0]]"
                     class="bg-blue-400 hover:bg-blue-500 font-bold py-2 px-5 m-0 shadow-md rounded-lg">
-              $$$
+              $$
             </button>
             <button *ngIf="g[0]" [routerLink]="['/availability-history/', g[0]]"
                     class="bg-yellow-400 hover:bg-yellow-500 font-bold py-2 px-5 m-0 shadow-md rounded-lg">
-              Aval
+              Avail
             </button>
           </td>
         </tr>
