Update contact-dev component

--- a/src/app/pages/contact-dev/contact-dev.component.html
+++ b/src/app/pages/contact-dev/contact-dev.component.html
@@ -4,8 +4,9 @@
   </div>
   <p class="text-xl">You can contact the developer via email <br><a
     class="text-xl text-red-600"
-    href="mailto:merlin.ua.1@gmail.com?subject=Project-D&body=Dear%20DEVELOPER%2C%0D%0A">{{ developerEmail }}</a><br>
-    <span class="text-xs">↑↑↑    LINK IS CLICKABLE    ↑↑↑</span></p>
+    href="mailto:merlin.ua.1@gmail.com?subject=Project-D&body=Dear%20DEVELOPER%2C%0D%0A">{{ developerEmail }}</a></p>
+  <a mat-flat-button href="mailto:merlin.ua.1@gmail.com?subject=Project-D&body=Dear%20DEVELOPER%2C%0D%0A"
+     target="_blank" class="mt-5">Send EMAIL</a>
 </div>
 
 
