Update export component, code cleanup

--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -15,8 +15,8 @@
     </mat-form-field>
   </div>
   <div class="mt-10">
-    <p>Service address: {{ dataService.getServiceAddress() }}</p>
-    <p>Production: {{ dataService.isProduction() }}</p>
+    <p>Service address: {{ service }}</p>
+    <p>Production: {{ production }}</p>
   </div>
 </div>
 
