Update service-restart component, code cleanup

--- a/src/app/pages/service-restart/service-restart.component.html
+++ b/src/app/pages/service-restart/service-restart.component.html
@@ -2,13 +2,14 @@
   <div class="header py-5">
     <app-home-button></app-home-button>
   </div>
-  <div class="controls mt-0">
+  <div class="controls mt-5">
     <p class="text-base">Service status: <span class="serviceStatus"
                                                [ngStyle]="{'color': getServiceStatusColor()}">{{ serviceStatus }}</span>
     </p>
     <p class="text-base" *ngIf="timeSinceLastUpdate!=-1">Last checked: <span
       class="lastUpdated">{{ timeSinceLastUpdate }} seconds ago</span></p>
-    <button mat-flat-button color="warn" *ngIf="serviceStatus==='RUNNING'" (click)="restartService()">RESTART Service
+    <button mat-flat-button color="warn" *ngIf="serviceStatus==='RUNNING'" (click)="restartService()" class="mt-0">
+      RESTART Service
     </button>
   </div>
 </div>
