--- a/src/app/pages/info/info.component.html
+++ b/src/app/pages/info/info.component.html
@@ -2,7 +2,7 @@
   <div class="header py-5">
     <app-home-button></app-home-button>
   </div>
-  <div class="project-background mx-auto w-3/5 font-sans mb-10">
+  <div class="project-background mx-auto w-3/5 font-sans my-10">
     <h1 class="font-mono text-gray-200 font-bold">Project Background</h1>
     <p class="text-justify indent-7 text-base text-gray-300">In today's world, e-commerce plays a key role in
       economic
