--- a/src/app/pages/db-control/db-control.component.html
+++ b/src/app/pages/db-control/db-control.component.html
@@ -2,19 +2,32 @@
   <div class="header py-5">
     <app-home-button></app-home-button>
   </div>
-  <div class="db-info mt-0">
-    <p class="text-base">DB type: <span class="db-type">{{ dbType }}</span></p>
+  <div class="db-info mt-5">
+    <p class="text-base">DB type: <span class="db-type text-yellow-500">{{ dbType }}</span></p>
   </div>
-  <div class="sqlite-db-info w-3/5 mx-auto mt-10">
-    <p class="text-base text-justify indent-7">SQLite is a lightweight, self-contained, serverless, and
-      zero-configuration relational database
-      management system. It is widely used for embedded database applications, as it stores the entire database in a
-      single file on disk and supports most of the SQL standard.</p>
+  <div class="w-3/5 mx-auto mt-10">
+    <h2>Database Information</h2>
+    <div class="sqlite-db-info" *ngIf="dbType==='sqlite'">
+      <p class="text-base text-justify indent-7"><span class="text-yellow-500">SQLite</span> is a lightweight,
+        self-contained, serverless, and
+        zero-configuration relational database
+        management system. It is widely used for embedded database applications, as it stores the entire database in a
+        single file on disk and supports most of the SQL standard.</p>
+      <a mat-raised-button href="https://www.sqlite.org/docs.html" target="_blank" class="mt-0">Learn more...</a><br>
+    </div>
+    <div class="mysql-db-info " *ngIf="dbType==='mysql'">
+      <p class="text-base text-justify indent-7"><span class="text-yellow-500">MySQL</span> is an open-source relational
+        database management system (RDBMS)
+        that uses structured query language (SQL) for database access. It is known for its reliability, speed, and ease
+        of
+        use, and is widely used in web applications to manage and store data. MySQL operates in a client-server model
+        and
+        supports multiple storage engines, providing flexibility and scalability.</p>
+      <a mat-raised-button href="https://dev.mysql.com/doc/" target="_blank" class="mt-0">Learn more...</a><br>
+    </div>
   </div>
-  <div class="mysql-db-info w-3/5 mx-auto mt-10">
-    <p class="text-base text-justify indent-7">MySQL is an open-source relational database management system (RDBMS)
-      that uses structured query language (SQL) for database access. It is known for its reliability, speed, and ease of
-      use, and is widely used in web applications to manage and store data. MySQL operates in a client-server model and
-      supports multiple storage engines, providing flexibility and scalability.</p>
+  <div class="db-diagram mt-10">
+    <h2>Database Diagram</h2>
+    <a mat-raised-button href="assets/images/db-diagram.png" target="_blank" class="mt-0">Show DB Diagram</a><br>
   </div>
 </div>
